    code to backends/packaging-apt-dpkg.py. This removes a major piece of
    apt/dpkg specific code from non-backends.
  * bin/apport-retrace: Rename option --no-dpkg to --no-pkg and update
    bin/apport-chroot accordingly.
  * Move bin/apport-chroot and man/apport-chroot.1 to debian/local, since they
    are totally Debian/Ubuntu specific.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 04 Apr 2009 10:38:53 -0700

apport (0.148) jaunty; urgency=low

  [ Matt Zimmerman ]
  * apport/hookutils.py: add attach_media_build to include information about
    the build of installation media in use (i.e. in a casper live CD
    environment)
  * general-hooks/ubuntu.py: use attach_media_build (LP: #351781)
  * bin/apportcheckresume: Use attach_file_if_exists rather than attach_file to
    avoid spurious error messages about non-existent log files (LP: #351973)
  
  [ Martin Pitt ]
  * debian/local/ubuntu-bug: Drop generic passthrough of apport-{cli,gtk,kde}
    options since this leads to too much confusion. Instead just support a
    single argument and check whether it is a pid, a package name, a .crash
    file, or a program path. This does the right thing when calling it with a
    .crash file (LP: #347392) and fixes the help output (LP: #344923) Update
    manpage accordingly.
  * apport/hookutils.py: Move attach_media_build() to
    general-hooks/ubuntu.py, since it is Ubuntu specific.
  * bin/apport-retrace: Fix KeyError crash on bugs with an ExecutablePath
    which does not exist any more. Close the bug as invalid instead.
    (LP: #352331)
  * bin/kernel_oops: Add "kernel-oops" tag. Since both bin/kernel_oops and
    bin/apportcheckresume use the "kerneloops" bug class, it previously was
    hard to filter out the bug reports which were real oopses. (LP: #349621)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 01 Apr 2009 18:10:01 +0200

apport (0.147) jaunty; urgency=low

  * bin/apportcheckresume: report the pm-suspend.log/pm-hibernate.log
    from /var/lib.